Fix mobile layout CSS error

--- a/index.html
+++ b/index.html
@@ -344,20 +344,38 @@
         }
 
         /* MOBILE RESPONSIVENESS */
-        }
+        @media (max-width: 600px) {
+            .pnl-wrapper {
+                transform: scale(0.9);
+                margin: 0;
+            }
 
-        .side-badge {
-            font-size: 12px;
-            padding: 6px 10px;
-        }
+            .pnl-container {
+                width: 100%;
+                max-width: 100%;
+                padding: 20px;
+            }
 
-        .container {
-            padding: 30px 20px;
-        }
+            .roi-value {
+                font-size: 36px;
+            }
 
-        .watermark {
-            font-size: 50px;
-        }
+            .pair-name {
+                font-size: 16px;
+            }
+
+            .side-badge {
+                font-size: 12px;
+                padding: 6px 10px;
+            }
+
+            .container {
+                padding: 30px 20px;
+            }
+
+            .watermark {
+                font-size: 50px;
+            }
         }
     </style>
 </head>
