--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
         }
 
         function shareTweet() {
-            const text = `I just claimed my airdrop, eligible for wave 2! 🚀\n\n@omega_netw0rd #OmegaNetwork #Airdrop`;
+            const text = `I just claimed my airdrop, eligible for wave 2! 🚀\n\n@omega_netw0rk #OmegaNetwork #Airdrop`;
             window.open(`https://twitter.com/intent/tweet?text=${encodeURIComponent(text)}`, '_blank');
         }
 
